<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.rouf.saht.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_pedometer"
        android:name="com.rouf.saht.pedometer.view.PedometerFragment"
        android:label="@string/title_pedometer"
        tools:layout="@layout/fragment_pedometer" />

    <fragment
        android:id="@+id/navigation_heartRate"
        android:name="com.rouf.saht.heartRate.view.HeartRateFragment"
        android:label="@string/title_heart_rate"
        tools:layout="@layout/fragment_heart_rate" />

    <fragment
        android:id="@+id/navigation_meditation"
        android:name="com.rouf.saht.meditation.MeditationFragment"
        android:label="@string/title_meditation"
        tools:layout="@layout/fragment_meditation" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rouf.saht.setting.view.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
