<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/delete_warning"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_height="46dp"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button_hollow_green_border"
            android:layout_weight="1"
            android:text="@string/no" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_height="46dp"
            android:layout_width="0dp"
            android:background="@drawable/bg_button_cornered_solid_red"
            app:backgroundTint="?attr/colorSecondary"
            android:layout_weight="1"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>