<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_top_round_corner"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_heartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:text="BPM"
        android:textColor="?attr/colorOnSurface"
        android:textSize="30sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="16sp"
        android:maxHeight="200dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_heartRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_heart_rate_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:hintTextColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorOnSurface"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_performed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_performed"
            android:textColor="?attr/colorOnSurface"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_heart_rate_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        app:chipSpacing="24dp"
        app:singleLine="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking"
            android:textColor="?attr/colorOnPrimary"
            app:chipBackgroundColor="?attr/colorPrimary"
            app:closeIconVisible="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRunning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textColor="?attr/colorOnPrimary"
            app:chipBackgroundColor="?attr/colorPrimary"
            app:closeIconVisible="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycling"
            android:textColor="?attr/colorOnPrimary"
            app:chipBackgroundColor="?attr/colorPrimary"
            app:closeIconVisible="false"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipResting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resting"
            android:textColor="?attr/colorOnPrimary"
            app:chipBackgroundColor="?attr/colorPrimary"
            app:closeIconVisible="false"/>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:background="@drawable/bg_button_cornered_solid_red"
        app:backgroundTint="?attr/colorPrimary"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/chipGroupDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:minHeight="50dp"
        android:background="@drawable/bg_button_cornered_solid_red"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/chipGroupDuration"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>